[workspace]
members = [
	"crates/cargo-gpu",
	"crates/cargo-gpu-install",
	"crates/xtask",
]

exclude = [
	# This currently needs to be excluded because it depends on a version of `rust-gpu` that
	# uses a toolchain whose Cargo version doesn't recognise version 4 of `Cargo.lock`.
	"crates/shader-crate-template",
	# Testing infra may copy the `shader-crate-template` into subdirs of target
	"target",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Rust-GPU/cargo-gpu"
readme = "./README.md"
keywords = ["gpu", "compiler", "rust-gpu"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "e7e447a9395a77caec5cbddea556af86bc68c573", default-features = false }
cargo-gpu-install = { path = "./crates/cargo-gpu-install" }
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events", "windows"] }
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4"
relative-path = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"
tempfile = "3.22"
test-log = "0.2.18"
cargo_metadata = "0.21.0"
cargo-util-schemas = "0.8.2"
semver = "1.0.26"
dunce = "1.0.5"



[workspace.lints.rust]
missing_docs = "warn"
# copied from rust-gpu
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
exit = "deny"
# copied from rust-gpu
all = { level = "warn", priority = -1 }
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
#exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
