[package]
name = "compiletests"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See `crates/spirv-builder/Cargo.toml` for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
spirv-builder.workspace = true

compiletest = { version = "0.9.0", package = "compiletest_rs" }
lazy_static = "1.4.0"
clap = { version = "4", features = ["derive"] }
itertools = "0.10.5"
