[package]
name = "cargo-gpu-install"
version.workspace = true
edition.workspace = true
description = "Install rust-gpu and it's required toolchain automatically"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true

[features]
clap = ["dep:clap", "spirv-builder/clap"]
watch = ["spirv-builder/watch"]
test = ["dep:tempfile"]
tty = ["dep:crossterm"]

[dependencies]
cargo_metadata.workspace = true
anyhow.workspace = true
spirv-builder.workspace = true
clap = { workspace = true, optional = true }
directories.workspace = true
log.workspace = true
serde.workspace = true
crossterm = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
test-log.workspace = true
cargo_metadata = { workspace = true, features = ["builder"] }
cargo-util-schemas = "0.8.2"
expect-test = "1.5.1"

[lints]
workspace = true
