[package]
name = "rustc_codegen_spirv-target-specs"
description = "target spec json files of rust-gpu for the rustc compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
include_str = []
dir_path = []
serde = ["dep:serde"]

[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
