[package]
name = "rustc_codegen_spirv-types"
description = "SPIR-V backend types shared between rustc_codegen_spirv and spirv-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spirv = { version = "0.3.0", features = ["serialize", "deserialize"] }
rspirv = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0.24", features = ["serde"] }
thiserror = "2.0.12"
