[package]
name = "rustc_codegen_spirv-types"
description = "SPIR-V backend types shared between rustc_codegen_spirv and spirv-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spirv.workspace = true
rspirv.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0.24", features = ["serde"] }
thiserror = "2.0.12"
