[package]
name = "rustc_codegen_spirv"
description = "SPIR-V code generator backend for rustc"
documentation = "https://rust-gpu.github.io/rust-gpu/api/rustc_codegen_spirv/index.html"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[features]
# These features are no-ops kept for compatibility with existing build configurations.
use-installed-tools = []
use-compiled-tools = []
# If enabled, this will not check whether the current rustc version is set to the
# appropriate channel. rustc_codegen_spirv requires a specific nightly version,
# and will likely produce compile errors when built against a different toolchain.
# Enable this feature to be able to experiment with other versions.
skip-toolchain-check = []

[dependencies]
# HACK(eddyb) these only exist to unify features across dependency trees,
# in order to avoid multiple separate instances of `rustc_codegen_spirv`.
ahash = { version = "0.8.11", features = ["no-rng"] }
bytemuck = { version = "1.20.0", features = ["aarch64_simd", "derive"] }
log = { version = "0.4.22", features = ["std"] }
regex = { version = "1", features = ["perf"] }
rustix = { version = "1.0.8", features = ["all-apis"] }

# HACK(eddyb) deps of `rustc_codegen_ssa`, for `pqp_cg_ssa` (see `build.rs`),
# that cannot be handled with just `extern crate` pulling out of the sysroot.
object = { version = "0.37.1", default-features = false, features = ["read_core", "elf", "macho", "pe", "xcoff", "unaligned", "archive", "write", "wasm"] }
thorin-dwp = "0.9.0"

# Normal dependencies.
ar = "0.9.0"
either = "1.8.0"
indexmap = "2.6.0"
rspirv.workspace = true
rustc_codegen_spirv-types.workspace = true
spirv-std-types = { workspace = true, features = ["std"] }
rustc-demangle = "0.1.21"
sanitize-filename = "0.6.0"
smallvec = { version = "1.6.1", features = ["const_generics", "const_new", "union"] }
spirt = "0.4.0"
spirv-tools.workspace = true
lazy_static = "1.4.0"
itertools = "0.14.0"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.0"

# HACK(eddyb) can't re-introduce deps of `rustc_codegen_ssa`, for `pqp_cg_ssa`
# (see `build.rs`).
# tempfile = "3.4"

# HACK(eddyb) deps of `rustc_codegen_ssa`, for `pqp_cg_ssa` (see `build.rs`),
# that cannot be handled with just `extern crate` pulling out of the sysroot.
[target.'cfg(unix)'.dependencies]
libc = "0.2.50"

# Note that in order to use RA and have access to `rustc_*` crates, you also
# need to set `"rust-analyzer.rustcSource": "discover"` in e.g. VSCode.
[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
