[package]
name = "spirv-std"
description = "Standard functions and types for SPIR-V"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
spirv-std-types.workspace = true
spirv-std-macros.workspace = true
bitflags = "1.3.2"
bytemuck = { workspace = true, optional = true }
glam_0_33 = { package = "glam", version = "0.33.0", optional = true, default-features = false, features = ["u32", "i32", "f64"] }
glam_0_32 = { package = "glam", version = "0.32.0", optional = true, default-features = false }
glam_0_31 = { package = "glam", version = "0.31.0", optional = true, default-features = false }
glam_0_30 = { package = "glam", version = "0.30.8", optional = true, default-features = false }

[target.'cfg(target_arch = "spirv")'.dependencies]
num-traits = { workspace = true, features = ["libm"] }
libm = { workspace = true }
glam_0_33 = { package = "glam", version = "0.33.0", optional = true, default-features = false, features = ["libm"] }
glam_0_32 = { package = "glam", version = "0.32.0", optional = true, default-features = false, features = ["libm"] }
glam_0_31 = { package = "glam", version = "0.31.0", optional = true, default-features = false, features = ["libm"] }
glam_0_30 = { package = "glam", version = "0.30.8", optional = true, default-features = false, features = ["libm"] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
num-traits = { workspace = true, default-features = true }
glam_0_33 = { package = "glam", version = "0.33.0", optional = true, default-features = false, features = ["std"] }
glam_0_32 = { package = "glam", version = "0.32.0", optional = true, default-features = false, features = ["std"] }
glam_0_31 = { package = "glam", version = "0.31.0", optional = true, default-features = false, features = ["std"] }
glam_0_30 = { package = "glam", version = "0.30.8", optional = true, default-features = false, features = ["std"] }

[features]
default = ["glam_0_33"]
bytemuck = ["dep:bytemuck", "glam_0_30?/bytemuck", "glam_0_31?/bytemuck", "glam_0_32?/bytemuck", "glam_0_33?/bytemuck"]
glam_0_33 = ["dep:glam_0_33"]
glam_0_32 = ["dep:glam_0_32"]
glam_0_31 = ["dep:glam_0_31"]
glam_0_30 = ["dep:glam_0_30"]
