[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
tempfile.workspace = true
toml.workspace = true
regex-lite.workspace = true

[lints]
workspace = true
