[package]
name = "compiletests"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# These features are no-ops kept for compatibility with existing build configurations.
use-installed-tools = []
use-compiled-tools = []

[dependencies]
compiletest = { version = "0.11.2", package = "compiletest_rs" }
rustc_codegen_spirv = { workspace = true }
rustc_codegen_spirv-types = { workspace = true }
clap = { version = "4", features = ["derive"] }
itertools = "0.14.0"

[package.metadata.release]
release = false
