[package]
name = "difftests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = [
    "rustc_codegen_spirv/use-installed-tools",
    "spirv-builder/use-installed-tools"
]
use-compiled-tools = [
    "rustc_codegen_spirv/use-compiled-tools",
    "spirv-builder/use-compiled-tools"
]

[dependencies]
rustc_codegen_spirv.workspace = true
spirv-builder.workspace = true
clap = { version = "4", features = ["derive"] }
itertools = "0.10.5"
anyhow = "1.0"
regex = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wgpu = { version = "23", features = ["spirv", "vulkan-portability"] }
tempfile = "3.5"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
tester = "0.9.1"
bytemuck = "1.21.0"
image = "0.25.5"

[lints]
workspace = true
