[package]
name = "cargo-gpu"
version.workspace = true
edition.workspace = true
description = "Generates shader .spv files from rust-gpu shader crates"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
default-run = "cargo-gpu"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata.workspace = true
anyhow.workspace = true
cargo-gpu-install = { workspace = true, features = ["clap", "watch", "tty"] }
clap.workspace = true
env_logger.workspace = true
log.workspace = true
relative-path.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
dunce.workspace = true

[dev-dependencies]
cargo-gpu-install = { workspace = true, features = ["test"] }
test-log.workspace = true
cargo_metadata = { workspace = true, features = ["builder"] }

[lints]
workspace = true
