[package]
name = "spirv-std-macros"
description = "Macros for spirv-std"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
spirv-std-types = { workspace = true, features = ["std"] }
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "2.0.90", features = ["full", "visit-mut"] }
proc-macro-crate = "3.3.0"
