[package]
name = "spirv-std-types"
description = "SPIR-V types shared between spirv-std, spirv-std-macros and rustc_codegen_spirv"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
std = []
